--- a/index.html
+++ b/index.html
@@ -106,28 +106,28 @@
                             <h3 class="team-name">Mark Guerrero</h3>
                             <p class="team-role">Product Designer</p>
                             <ul class="team-socials">
-                                <li>
+                                <li class="team-social-item">
                                     <a class="team-social-link" href="#" aria-label="Instagram">
                                         <svg class="team-social-icon" width="16" height="16">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="team-social-item">
                                     <a class="team-social-link" href="#" aria-label="Twitter">
                                         <svg class="team-social-icon" width="16" height="16">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="team-social-item">
                                     <a class="team-social-link" href="#" aria-label="Facebook">
                                         <svg class="team-social-icon" width="16" height="16">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="team-social-item">
                                     <a class="team-social-link" href="#" aria-label="LinkedIn">
                                         <svg class="team-social-icon" width="16" height="16">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
@@ -262,8 +262,9 @@
                         <div class="image-wrapper">
                             <img class="portfolio-image" src="./images/banking.jpg" alt="banking app" width="360">
                             <div class="overlay">
-                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
-                                Exotic Fruit Ecommerce App · Cloud Storage App
+                                <p class="portfolio-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                    Calorie Tracker App ·
+                                    Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                         </div>
                         <div class="portfolio-list-one">
@@ -272,35 +273,70 @@
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-image" src="./images/payment.jpg" alt="Cashless Payment" width="360">
+                        <div class="image-wrapper">
+                            <img class="portfolio-image" src="./images/payment.jpg" alt="Cashless Payment" width="360">
+                            <div class="overlay">
+                                <p class="portfolio-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                    Calorie Tracker App ·
+                                    Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
+                        </div>
                         <div class="portfolio-list-one">
                             <h3 class="portfolio-name">Cashless Payment</h3>
                             <p class="portfolio-category">Marketing</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-image" src="./images/app.jpg" alt="Meditation App" width="360">
+                        <div class="image-wrapper">
+                            <img class="portfolio-image" src="./images/app.jpg" alt="Meditation App" width="360">
+                            <div class="overlay">
+                                <p class="portfolio-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                    Calorie Tracker App ·
+                                    Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
+                        </div>
                         <div class="portfolio-list-one">
                             <h3 class="portfolio-name">Meditation App</h3>
                             <p class="portfolio-category">App</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-image" src="./images/taxi.jpg" alt="Taxi Service" width="360">
+                        <div class="image-wrapper">
+                            <img class="portfolio-image" src="./images/taxi.jpg" alt="Taxi Service" width="360">
+                            <div class="overlay">
+                                <p class="portfolio-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                    Calorie Tracker App ·
+                                    Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
+                        </div>
                         <div class="portfolio-list-one">
                             <h3 class="portfolio-name">Taxi Service</h3>
                             <p class="portfolio-category">Marketing</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-image" src="./images/screen.jpg" alt="Screen Illustrations" width="360">
+                        <div class="image-wrapper">
+                            <img class="portfolio-image" src="./images/screen.jpg" alt="Screen Illustrations" width="360">
+                            <div class="overlay">
+                                <p class="portfolio-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                    Calorie Tracker App ·
+                                    Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
+                        </div>
                         <div class="portfolio-list-one">
                             <h3 class="portfolio-name">Screen Illustrations</h3>
                             <p class="portfolio-category">Design</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-image" src="./images/courses.jpg" alt="Online Courses" width="360">
+                        <div class="image-wrapper">
+                            <img class="portfolio-image" src="./images/courses.jpg" alt="Online Courses" width="360">
+                            <div class="overlay">
+                                <p class="portfolio-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                    Calorie Tracker App ·
+                                    Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
+                        </div>
                         <div class="portfolio-list-one">
                             <h3 class="portfolio-name">Online Courses</h3>
                             <p class="portfolio-category">Marketing</p>
