--- a/index.html
+++ b/index.html
@@ -351,8 +351,6 @@
     <footer class="footer">
   <div class="container">
     <div class="footer-wrapper">
-      
-      <!-- Блок логотип + текст -->
       <div class="footer-info">
         <a class="footer-navigation-logo-first-logo" href="./index.html">
           Web<span class="footer-navigation-logo-italic">Studio</span>
@@ -361,33 +359,31 @@
           Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
       </div>
-
-      <!-- Блок соціальних мереж -->
       <div class="footer-socials">
         <p class="footer-socials-title">Social media</p>
         <ul class="footer-socials-list">
-          <li>
+          <li class="footer-socials-item">
             <a class="footer-social-link" href="#" aria-label="Instagram">
               <svg class="footer-social-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
-          <li>
+          <li class="footer-socials-item">
             <a class="footer-social-link" href="#" aria-label="Twitter">
               <svg class="footer-social-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
-          <li>
+          <li class="footer-socials-item">
             <a class="footer-social-link" href="#" aria-label="Facebook">
               <svg class="footer-social-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
-          <li>
+          <li class="footer-socials-item">
             <a class="footer-social-link" href="#" aria-label="LinkedIn">
               <svg class="footer-social-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-linkedin"></use>
