--- a/index.html
+++ b/index.html
@@ -349,8 +349,7 @@
     </main>
 
     <footer class="footer">
-  <div class="container">
-    <div class="footer-wrapper">
+  <div class="container footer-wrapper">
       <div class="footer-info">
         <a class="footer-navigation-logo-first-logo" href="./index.html">
           Web<span class="footer-navigation-logo-italic">Studio</span>
@@ -392,8 +391,6 @@
           </li>
         </ul>
       </div>
-
-    </div>
   </div>
 </footer>
 
